# captcha-solver-coursework

./: README.md  main.py  pyproject.toml
